# research_project

./: .gitignore  CAT_DOG_SETUP.md  KAGGLE_QUICKSTART.md  KAGGLE_SETUP.md  MIGRATION.md  POWERSHELL_FIXED.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_XAI.md  README.md  SETUP_MIGRATION_COMPLETE.md  STRUCTURE.md  TESTING_GUIDE.md  XAI_INTEGRATION_SUMMARY.md  XAI_QUICK_REFERENCE.md  XAI_READY.md  env.yaml  pyproject.toml  requirements-kaggle.txt  requirements.txt  setup.py
configs/: classification.yaml  concepts.yaml  llm.yaml  manifold.yaml  segmentation.yaml  xai.yaml
configs/model/: resnet18.yaml  simple_cnn.yaml  unet_mini.yaml
data/: README.md
experiments/: README.md
notebooks/: 01_classification_tutorial.ipynb
scripts/: demo_xai.py  predict_image.py  run_concepts.py  run_llm_explanations.py  run_manifold.py  run_xai.py  test_model.py  train_classification.py  train_classification_kaggle.py  train_segmentation.py  xai_research_example.py
src/: __init__.py
src/concepts/: __init__.py  tcav.py
src/counterfactuals/: __init__.py  generation.py
src/datasets/: __init__.py  classification.py  segmentation.py
src/evaluation/: __init__.py  metrics.py
src/llm/: __init__.py  explainer.py
src/manifold/: __init__.py  analysis.py
src/models/: __init__.py
src/models/classification/: __init__.py  resnet.py  simple_cnn.py
src/models/segmentation/: __init__.py  simple_segmenter.py  unet.py
src/training/: __init__.py  classification_trainer.py  segmentation_trainer.py
src/utils/: __init__.py  config.py  general.py  logging.py
src/xai/: __init__.py  attribution.py  visualization.py
