[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_project"
version = "0.1.0"
description = "PyTorch Research Project for Classification & Segmentation with XAI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@domain.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=9.5.0",
    "captum>=0.6.0",
    "grad-cam>=1.4.8",
    "shap>=0.42.0",
    "umap-learn>=0.5.3",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "uncertainty-toolbox>=0.1.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
gpu = [
    "faiss-gpu>=1.7.4",
]
diffusion = [
    "diffusers>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/RiyadhDerbale/research_project"
Repository = "https://github.com/RiyadhDerbale/research_project"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
